@@ -17,6 +17,7 @@ Slated for 2.20.0
 - Added: TypeProfile.getGetterMethods(), getAnnotatedPublicFields(),
   getAnnotatedGetters(), getAnnotatedSetters().
 - Changed: toString() methods on some data structures.
+- Added: Common.openResource().
 
 Changed in 2.19.0
 =================
